Fix Command palette placeholder color in dark mode
Bug: 1492452
Reviewed-on: https://chromium-review.googlesource.com/c/devtools/devtools-frontend/+/4968457
Commit-Queue: Kateryna Prokopenko <kprokopenko@chromium.org>
Auto-Submit: Kateryna Prokopenko <kprokopenko@chromium.org>
Commit-Queue: Wolfgang Beyer <wolfi@chromium.org>

--- a/front_end/ui/legacy/themeColors.css
+++ b/front_end/ui/legacy/themeColors.css
@@ -643,7 +643,7 @@
   --sys-color-state-focus-ring: var(--ref-palette-primary80);
   --sys-color-state-focus-select: var(--ref-palette-secondary50);
   --sys-color-state-focus-highlight: rgb(253 252 251 / 10%);
-  --sys-color-state-disabled: rgb(227 227 227 / 100%);
+  --sys-color-state-disabled: rgb(227 227 227 / 38%);
   --sys-color-state-disabled-container: rgb(227 227 227 / 12%);
   --sys-color-state-header-hover: var(--ref-palette-secondary30);
   --sys-color-state-on-header-hover: var(--ref-palette-secondary90);
